build_errors_v5.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 1 errors
src\editor.zig:16:7: error: root source file struct 'raylib_stub' has no member named 'setConfigFlags'
    rl.setConfigFlags(rl.ConfigFlags{
    ~~^~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib\std\start.zig:675:59
    main: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib\std\start.zig:647:28
    2 reference(s) hidden; use '-freference-trace=4' to see all references
error: 1 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

install
+- install nyon_game
   +- compile exe nyon_game Debug native 6 errors
src\engine.zig:247:31: error: root source file struct 'raylib_stub' has no member named 'KeyboardKey'
pub const KeyboardKey = raylib.KeyboardKey;
                        ~~~~~~^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    KeyboardKey: src\application.zig:12:31
    run: src\application.zig:124:45
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src\engine.zig:264:36: error: root source file struct 'raylib_stub' has no member named 'CameraProjection'
pub const CameraProjection = raylib.CameraProjection;
                             ~~~~~~^~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\engine.zig:326:35: error: root source file struct 'raylib_stub' has no member named 'getWindowScaleDPI'
    pub const getScaleDPI = raylib.getWindowScaleDPI;
                            ~~~~~~^~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\engine\raylib_backend.zig:10:27: error: root source file struct 'raylib_stub' has no member named 'ConfigFlags'
        var flags = raylib.ConfigFlags{};
                    ~~~~~~^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\ui\ui.zig:75:32: error: root source file struct 'raylib_stub' has no member named 'loadFileText'
        const text_ptr = raylib.loadFileText(path_z);
                         ~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\sysgpu\interface.zig:302:28: error: sysgpu.Interface field 'deviceCreateRenderPipeline'
                                                      	expected type: fn (*sysgpu.device.Device, *const sysgpu.render_pipeline.RenderPipeline.Descriptor) ?*sysgpu.render_pipeline.RenderPipeline
                                                      	   found type: fn (*sysgpu.device.Device, *const sysgpu.render_pipeline.RenderPipeline.Descriptor) callconv(.@"inline") ?*sysgpu.render_pipeline.RenderPipeline
    if (FoundDecl != Decl) @compileError("sysgpu.Interface field '" ++ name ++ "'\n\texpected type: " ++ @typeName(Decl) ++ "\n\t   found type: " ++ @typeName(FoundDecl));
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\sysgpu\interface.zig:24:15: note: called at comptime here
    assertDecl(T, "deviceCreateRenderPipeline", fn (device: *sysgpu.Device, descriptor: *const sysgpu.RenderPipeline.Descriptor) ?*sysgpu.RenderPipeline);
    ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\main.zig:19:34: note: called at comptime here
pub const Impl = sysgpu.Interface(struct {
                 ~~~~~~~~~~~~~~~~^
error: 6 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 6 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\48f283d057ff3818d09c60beef4fd871\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xa99ae2fd -Ze1b1d359538fa6d1
